# Revolution-Game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: Animation.cpp.C21CEBF6C295F4E3.idx  Animation.h.ECFA8C02195B13BA.idx  Command.cpp.3A977FB0C8F51858.idx  Command.h.0AD15A1741336C8F.idx  Controller.cpp.EC04F1A5831DFC7D.idx  Controller.h.62472A00C579BE18.idx  Entidad.cpp.E76B94A613AB7110.idx  Entidad.h.A0561EB45EB44352.idx  Escenario.cpp.50AF3A79AE9CB5ED.idx  Escenario.h.F1AFFC06D2FABB14.idx  Firegun.cpp.D22A2F7413CE6547.idx  Firegun.h.41BEDB8F66A58815.idx  Imagen.cpp.423B24DA3F73CBA0.idx  Imagen.h.E449F332C781C00E.idx  Invoker.cpp.2F9DC050F1084DF0.idx  Invoker.h.82AF55FD3A64A45D.idx  Item.cpp.481843F3FF8092DC.idx  Item.h.25B92015225A207C.idx  Juego.cpp.39386467736660B0.idx  Juego.h.E77ED7B5C102C786.idx  JuegoView.cpp.1C50625D50434A38.idx  JuegoView.h.0D79EB0CC6EBB2CC.idx  Jugador.cpp.5CC5744FB3EBA632.idx  Jugador.h.9C4A6011E9BEDE68.idx  JugadorView.cpp.8E4B1E0E2D8B1FB9.idx  JugadorView.h.E10D363C436253EE.idx  Menu.cpp.DE4ADDEBC13ACB47.idx  Menu.h.D8EA77FCF5C3F6DA.idx  MenuView.cpp.CC0FFCDD45655E2D.idx  MenuView.h.A173B2B60FF698BA.idx  Model.cpp.B19340F0975F87CB.idx  Model.h.1D4FFC94F9EBC370.idx  (+12 more)
Controller/: Controller.cpp  Controller.h
Model/: AnimacionM.cpp  AnimacionM.h  Bala.cpp  Bala.h  Entidad.cpp  Entidad.h  Firegun.cpp  Firegun.h  GameWorld.cpp  GameWorld.h  Item.cpp  Item.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  MainMenu.cpp  MainMenu.h  Model.cpp  Model.h  Obstaculo.cpp  Obstaculo.h  Personaje.h  Proyectil.cpp  Proyectil.h  Stage.cpp  Stage.h  Vector2d.h
Resources/Niveles/: stage1.csv  stage2.csv  stage3.csv  stage4.csv  stage5.csv  stage6.csv  stage7.csv
Util/: DataColections.h  Estados.h
View/: Animation.cpp  Animation.h  Escenario.cpp  Escenario.h  EstadoView.cpp  EstadoView.h  JuegoView.cpp  JuegoView.h  JugadorView.cpp  JugadorView.h  Menu.cpp  Menu.h  MenuView.cpp  MenuView.h  PersonajeView.cpp  PersonajeView.h  ProyectilV.cpp  ProyectilV.h  Render.cpp  Render.h  View.cpp  View.h
View/States/: GameState.h
